added stuff to readme and fixed one issue in scripts

--- a/docs/SetupMetroCluster.adoc
+++ b/docs/SetupMetroCluster.adoc
@@ -527,7 +527,7 @@ CURL="curl -s -S"
 # Add authentication related options, required once security is initialized
 AUTH_CURL="${CURL} --${AUTH_MODE} --user ${USER}:${PASS}"
 
-$AUTH_CURL -X PUT -i -H "Content-type: application/json" -d { "zone":"'$GROUPNAME'" } http://$HOST:8002/manage/v2/hosts/$VOTER_HOST/properties
+$AUTH_CURL -X PUT -H "Content-type: application/json" -d '{"group": "'$GROUPNAME'"}' http://$HOST:8002/manage/v2/hosts/$VOTERHOST/properties
 ----
 
 === Script voor het aanmaken en koppelen van replica forests voor de systeemdatabases
